update link to about github actions in first response

--- a/responses/00.0_welcome.md
+++ b/responses/00.0_welcome.md
@@ -6,4 +6,4 @@ There are parts of this course which will need to be completed locally, using th
 
 > Note: This course will only work for members of the GitHub Actions limited public beta.
 >
-> GitHub Actions is currently in limited public beta and is subject to change. We strongly recommend that you do not use this feature for high-value workflows and content during the beta period. For more information, see "[About GitHub Actions]()."
+> GitHub Actions is currently in limited public beta and is subject to change. We strongly recommend that you do not use this feature for high-value workflows and content during the beta period. For more information, see "[About GitHub Actions](https://help.github.com/articles/about-github-actions)."
