--- a/responses/06.0_workflow-finished.md
+++ b/responses/06.0_workflow-finished.md
@@ -13,7 +13,7 @@ In this repository:
 - Change the contents of `entrypoint.sh` to do output a different message.
 
 Outside of this repository:
-- Review the [GitHub Actions docs]() on the GitHub Developer site. 
+- Review the [GitHub Actions documentation](https://help.github.com/articles/about-github-actions) on the GitHub Developer site. 
 - Use existing actions from the [GitHub Marketplace](https://github.com/marketplace/actions).
 - Use existing actions from GitHub's [official list](https://github.com/actions).
 - Use actions created by others in [awesome-actions](https://github.com/sdras/awesome-actions).
