rename all occurances of to main.yml

--- a/responses/02.0_entrypoint-success.md
+++ b/responses/02.0_entrypoint-success.md
@@ -5,7 +5,7 @@ In `entrypoint.sh`, all we're doing is outputting a "Hello world" message using 
 Next, we'll define a **workflow** that uses the GitHub Action.
 
 ### Workflow Files
-Workflows are defined in special files in the `.github/workflows` directory, named `workflow.yaml`.
+Workflows are defined in special files in the `.github/workflows` directory, named `main.yml`.
 
 Workflows can execute based on your chosen event. For this lab, we'll be using the [`push`](https://developer.github.com/v3/activity/events/types/#pushevent) event.
 
@@ -18,8 +18,8 @@ First, we'll add the bones of the workflow. We'll add the action itself in a lat
 ### :keyboard: Activity: Name and trigger your workflow
 
 1. As a part of this branch and pull request, create a `workflows` directory nested inside the `.github` directory.
-1. In the new `.github/workflows/` directory, create a file titled `workflow.yaml`
-1. Add the following content to the `workflow.yaml` file:
+1. In the new `.github/workflows/` directory, create a file titled `main.yml`
+1. Add the following content to the `main.yml` file:
     ```yaml
     name: A workflow for my Hello World file
     on: push
@@ -29,13 +29,13 @@ First, we'll add the bones of the workflow. We'll add the action itself in a lat
 
 <details><summary>Trouble pushing? Click here.</summary>
 
-The `workflow.yaml` file cannot be edited using an integration. Try editing the file using the web interface, or your command line.
+The `main.yml` file cannot be edited using an integration. Try editing the file using the web interface, or your command line.
 
 It is possible that you are using an integration (like GitHub Desktop or any other tool that authenticates as you and pushes on your behalf) if you receive a message like the one below:
 
 ```shell
 To https://github.com/your-username/your-repo.git
- ! [remote rejected] your-branch -> your-branch (refusing to allow an integration to update workflow.yaml)
+ ! [remote rejected] your-branch -> your-branch (refusing to allow an integration to update main.yml)
 error: failed to push some refs to 'https://github.com/your-username/your-repo.git'
 ```
 </details>
