--- a/responses/03.0_workflow-block-success.md
+++ b/responses/03.0_workflow-block-success.md
@@ -18,7 +18,7 @@ Let's add the expected action to the workflow.
 
 ### :keyboard: Activity: Add an action block to your workflow file and commit it to your branch
 
-1. As a part of this branch and pull request, edit `.github/workflows/workflow.yaml` to append the following content:
+1. As a part of this branch and pull request, edit `.github/workflows/main.yml` to append the following content:
     ```yaml
     jobs:
       build:
@@ -35,13 +35,13 @@ Let's add the expected action to the workflow.
 
 <details><summary>Trouble pushing?</summary>
 
-The `workflow.yaml` file cannot be edited using an integration. Try editing the file using the web interface, or your command line.
+The `main.yml` file cannot be edited using an integration. Try editing the file using the web interface, or your command line.
 
 It is possible that you are using an integration (like GitHub Desktop or any other tool that authenticates as you and pushes on your behalf) if you receive a message like the one below:
 
 ```shell
 To https://github.com/your-username/your-repo.git
- ! [remote rejected] your-branch -> your-branch (refusing to allow an integration to update workflow.yaml)
+ ! [remote rejected] your-branch -> your-branch (refusing to allow an integration to update main.yml)
 error: failed to push some refs to 'https://github.com/your-username/your-repo.git'
 ```
 </details>
