--- a/responses/04.0_trigger.md
+++ b/responses/04.0_trigger.md
@@ -10,7 +10,7 @@ Nice, you just added an action block to your workflow file! Here are some import
 
 ### Your action is about to be triggered!
 
-Your repository now contains everything it needs for the action to be defined (in the `./action-a/` folder) and everything it needs to be triggered (in the `./github/workflow.yaml` file).
+Your repository now contains everything it needs for the action to be defined (in the `./action-a/` folder) and everything it needs to be triggered (in the `./github/main.yml` file).
 
 The action will run anytime a commit is recognized on the remote repository. Since you just pushed, let's wait for the workflow to be triggered. This might take a few minutes since it's the first time running in this repository.
 
