--- a/responses/06.0_workflow-finished.md
+++ b/responses/06.0_workflow-finished.md
@@ -9,7 +9,7 @@ You merged and this course is now complete! I'll stop responding but the fun doe
 In this repository:
 - Your merge should trigger your action again, check it out in the [Actions tab]({{ repo }}/actions).
 - The `Dockerfile` contains metadata for your action. Try changing some of that. You could, for example, change the icon that displays when the action is running.
-- Change the `MY_NAME` environment variable to use your name instead of Mona's in `.github/workflows/workflow.yaml`.
+- Change the `MY_NAME` environment variable to use your name instead of Mona's in `.github/workflows/main.yml`.
 - Change the contents of `entrypoint.sh` to do output a different message.
 
 Outside of this repository:
