--- a/responses/03.1_e-no-workflow.md
+++ b/responses/03.1_e-no-workflow.md
@@ -1,10 +1,10 @@
-The file `workflow.yaml` isn't where I expected. Here are some troubleshooting steps that might help.
+The file `main.yml` isn't where I expected. Here are some troubleshooting steps that might help.
 
 | Problem                                                     | Solution                                                                                                                                                                                        |
 |-------------------------------------------------------------|-------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------|
-| The file isn't called `workflow.yaml` (case sensitive).      | Rename the file using the [UI](https://help.github.com/articles/renaming-a-file/) or [your CLI](https://help.github.com/articles/renaming-a-file-using-the-command-line/).                       |
-| The directory `.github` doesn't exist.                      | [Create the `.github` folder](https://help.github.com/articles/creating-new-files/) and [move `workflow.yaml`](https://help.github.com/articles/moving-a-file-to-a-new-location/) to `.github`. |
-| The `workflow.yaml` file isn't inside the `.github` folder. | [Move `workflow.yaml`](https://help.github.com/articles/moving-a-file-to-a-new-location/) to `.github`.                                                                                         |
+| The file isn't called `main.yml` (case sensitive).      | Rename the file using the [UI](https://help.github.com/articles/renaming-a-file/) or [your CLI](https://help.github.com/articles/renaming-a-file-using-the-command-line/).                       |
+| The directory `.github` doesn't exist.                      | [Create the `.github` folder](https://help.github.com/articles/creating-new-files/) and [move `main.yml`](https://help.github.com/articles/moving-a-file-to-a-new-location/) to `.github`. |
+| The `main.yml` file isn't inside the `.github` folder. | [Move `main.yml`](https://help.github.com/articles/moving-a-file-to-a-new-location/) to `.github`.                                                                                         |
 
 <hr>
 <h3 align="center">When I detect your new commit, I'll respond in this pull request.</h3>
