--- a/responses/05.1_e-no-run.md
+++ b/responses/05.1_e-no-run.md
@@ -28,14 +28,14 @@ You can also use the following to help you troubleshoot:
 | The `Dockerfile` isn't inside the `action-a` folder. | [Move the `Dockerfile`](https://help.github.com/articles/moving-a-file-to-a-new-location/) to `action-a`.                                                                                          |
 </details>
 
-<details><summary>For <code>./.github/workflows/workflow.yaml</code></summary>
+<details><summary>For <code>./.github/workflows/main.yml</code></summary>
 
 | Problem                                                     | Solution                                                                                                                                                                                        |
 |-------------------------------------------------------------|-------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------|
-| There's some problem with your syntax in `workflow.yaml`.   | Copy and paste the code exactly as is shown in this PR (check for extra spaces, symbols) or see if an error appears in the action logs.                                                         |
-| The file isn't called `workflow.yaml` (case sensitive).      | Rename the file using the [UI](https://help.github.com/articles/renaming-a-file/) or [your CLI](https://help.github.com/articles/renaming-a-file-using-the-command-line/).                       |
-| The directory `.github/workflows` doesn't exist.                      | [Create the `.github/workflows` folders](https://help.github.com/articles/creating-new-files/) and [move `workflow.yaml`](https://help.github.com/articles/moving-a-file-to-a-new-location/) to `.github/workflows`. |
-| The `workflow.yaml` file isn't inside the `.github/workflows` folder. | [Move `workflow.yaml`](https://help.github.com/articles/moving-a-file-to-a-new-location/) to `.github/workflows`.                                                                                         |
+| There's some problem with your syntax in `main.yml`.   | Copy and paste the code exactly as is shown in this PR (check for extra spaces, symbols) or see if an error appears in the action logs.                                                         |
+| The file isn't called `main.yml` (case sensitive).      | Rename the file using the [UI](https://help.github.com/articles/renaming-a-file/) or [your CLI](https://help.github.com/articles/renaming-a-file-using-the-command-line/).                       |
+| The directory `.github/workflows` doesn't exist.                      | [Create the `.github/workflows` folders](https://help.github.com/articles/creating-new-files/) and [move `main.yml`](https://help.github.com/articles/moving-a-file-to-a-new-location/) to `.github/workflows`. |
+| The `main.yml` file isn't inside the `.github/workflows` folder. | [Move `main.yml`](https://help.github.com/articles/moving-a-file-to-a-new-location/) to `.github/workflows`.                                                                                         |
 </details>
 
 <hr>
