remove manual chmod step

--- a/responses/00.1_first-steps.md
+++ b/responses/00.1_first-steps.md
@@ -31,6 +31,7 @@ Actions come in two types: Docker container and JavaScript. Our action will use 
 
     ADD entrypoint.sh /entrypoint.sh
     ENTRYPOINT ["/entrypoint.sh"]
+    RUN chmod +x /entrypoint.sh
     ```
 1. Stage and commit your file
     - If you're working locally, you will also need to push the branch to GitHub
