remove requirement to work locally

--- a/responses/00.0_welcome.md
+++ b/responses/00.0_welcome.md
@@ -2,7 +2,7 @@
 
 This course helps you create a simple action and use that action in a workflow.
 
-There are parts of this course which will need to be completed locally, using the command line. During those steps, more instructions are provided in case you're used to working with the GitHub.com interface directly.
+You can complete this course directly on GitHub, or locally by cloning this repository.
 
 > Note: This course will only work for members of the GitHub Actions limited public beta.
 >
