add a link to the Dockerfile

--- a/responses/00.1_first-steps.md
+++ b/responses/00.1_first-steps.md
@@ -11,11 +11,10 @@ Actions come in two types: **container actions** and **JavaScript actions**. Our
 
 ### :keyboard: Activity: Create a `Dockerfile` and open a pull request
 
-1. Create a new branch
-    - _Branches should be named intentionally, so a good name for this branch could be `first-action`_
-1. On the new branch, create a directory: `action-a`
-    - _Note:_ If you're working on GitHub.com, you can create a directory and a file at the same time by naming the file `action-a/Dockerfile`
-1. In the `action-a` directory, create a file titled `Dockerfile`
+1. Create a file titled `action-a/Dockerfile` by [using this quick link]({{ dockerfileUrl }}) or manually:
+    - Create a new branch. _Branches should be named intentionally, so a good name for this branch could be `first-action`_.
+    - On the new branch, create a directory: `action-a`. _Note:_ If you're working on GitHub.com, you can create a directory and a file at the same time by naming the file `action-a/Dockerfile`.
+    - In the `action-a` directory, create a file titled `Dockerfile`.
 1. Fill the `Dockerfile` with the content below:
     ```Dockerfile
     FROM debian:9.5-slim
@@ -33,8 +32,8 @@ Actions come in two types: **container actions** and **JavaScript actions**. Our
     RUN chmod +x /entrypoint.sh
     ENTRYPOINT ["/entrypoint.sh"]
     ```
-1. Stage and commit your file
-    - If you're working locally, you will also need to push the branch to GitHub
+1. Commit your file
+    - If you're working locally, you will also need stage your file and to push the branch to GitHub.
 1. Open a pull request with your new branch against `master`
 
 <hr>
