add a link to the workflow file

--- a/responses/02.0_entrypoint-success.md
+++ b/responses/02.0_entrypoint-success.md
@@ -17,8 +17,9 @@ First, we'll add the bones of the workflow. We'll add the action itself in a lat
 
 ### :keyboard: Activity: Name and trigger your workflow
 
-1. As a part of this branch and pull request, create a `workflows` directory nested inside the `.github` directory.
-1. In the new `.github/workflows/` directory, create a file titled `main.yml`
+1. Create a file titled `.github/workflows/main.yml`. You can do so [using this quicklink]({{ worfkflowUrl}}) or manually:
+    - As a part of this branch and pull request, create a `workflows` directory nested inside the `.github` directory.
+    - In the new `.github/workflows/` directory, create a file titled `main.yml`
 1. Add the following content to the `main.yml` file:
     ```yaml
     name: A workflow for my Hello World file
