add an edit workflow url

--- a/responses/03.0_workflow-block-success.md
+++ b/responses/03.0_workflow-block-success.md
@@ -18,7 +18,7 @@ Let's add the expected action to the workflow.
 
 ### :keyboard: Activity: Add an action block to your workflow file and commit it to your branch
 
-1. As a part of this branch and pull request, edit `.github/workflows/main.yml` to append the following content:
+1. As a part of this branch and pull request, [edit `.github/workflows/main.yml`]({{ workflowEditUrl }}) to append the following content:
     ```yaml
     jobs:
       build:
