--- a/responses/00.0_welcome.md
+++ b/responses/00.0_welcome.md
@@ -4,6 +4,6 @@ This course helps you create a simple action and use that action in a workflow.
 
 You can complete this course directly on GitHub, or locally by cloning this repository.
 
-> Note: This course will only work for members of the GitHub Actions limited public beta.
+> Note: This course will only work for members of the GitHub Actions limited public beta. To join the beta, [Sign up for GitHub Actions Beta](https://github.com/features/actions/signup/) and ensure you've received an email confirming GitHub Actions is enabled on your account before continuing this course.
 >
-> GitHub Actions is currently in limited public beta and is subject to change. We strongly recommend that you do not use this feature for high-value workflows and content during the beta period. For more information, see "[About GitHub Actions](https://help.github.com/articles/about-github-actions)."
+> GitHub Actions is currently in limited public beta and is subject to change. We strongly recommend that you do not use this feature for high-value workflows and content during the beta period. For more information, see "[About GitHub Actions](https://help.github.com/articles/about-github-actions)".
