tweaks from review of course

--- a/responses/00.0_welcome.md
+++ b/responses/00.0_welcome.md
@@ -1,9 +1,31 @@
 # Welcome
 
-This course helps you create a simple action and use that action in a workflow.
+This course helps you create a simple GitHub Action and use that action in a workflow. You may already be familiar with GitHub Actions, but if you need more information, expand the "Learn more about actions" section below.
 
-You can complete this course directly on GitHub, or locally by cloning this repository.
+<details><summary>Learn more about actions</summary>
+<hr>
 
-> Note: This course will only work for members of the GitHub Actions limited public beta. To join the beta, [Sign up for GitHub Actions Beta](https://github.com/features/actions/signup/) and ensure you've received an email confirming GitHub Actions is enabled on your account before continuing this course.
->
-> GitHub Actions is currently in limited public beta and is subject to change. We strongly recommend that you do not use this feature for high-value workflows and content during the beta period. For more information, see "[About GitHub Actions](https://help.github.com/articles/about-github-actions)".
+## Learn more about actions
+
+GitHub Actions are a flexible way to automate nearly every aspect of your team's software workflow. Here are just a few of the ways teams are using GitHub Actions:
+
+- Automated testing (CI)
+- Continuous delivery and deployment
+- Responding to workflow triggers using issues, @ mentions, labels, and more
+- Triggering code reviews
+- Managing branches
+- Triaging issues and pull requests
+
+The sky is truly the limit with GitHub Actions.
+
+The best part, these workflows are stored as code in your repository and easily shared and reused across teams.
+
+To learn even more, check out the [GitHub Actions page](https://github.com/features/actions).
+<hr>
+</details><br>
+
+> Note: This course will only work for members of the GitHub Actions beta. Please [sign up for GitHub Actions Beta](https://github.com/features/actions) before continuing this course.
+
+### Before you begin
+
+In this course you will work with issues and pull requests, as well as edit files on GitHub (or locally if that's your style). If these things are familiar to you, we recommend you take the [Introduction to GitHub]({{ host }}/githubtraining/introduction-to-github) course, first!
