--- a/responses/01.0_docker-success.md
+++ b/responses/01.0_docker-success.md
@@ -6,17 +6,17 @@ ENTRYPOINT ["/entrypoint.sh"]
 
 The `entrypoint.sh` script will be run in Docker, and it will define what the action is really going to be doing.
 
-## Step 2: Add the action's script
+## Step 2: Add an entrypoint script
 
 An entrypoint script must exist in our repository so that Docker has something to execute.
 
 ### :keyboard: Activity: Add an entrypoint script and commit it to your branch
 
-1. As a part of this branch and pull request, create a file in the `./action-a/` directory titled `entrypoint.sh`. You can do so with [this quicklink]({{ actionAUrl }})
+1. As a part of this branch and pull request, create a file in the `/action-a/` directory titled `entrypoint.sh`. You can do so with [this quicklink]({{ actionAUrl }})
 1. Add the following content to the `entrypoint.sh` file:
     ```shell
     #!/bin/sh -l
-	
+
 	sh -c "echo Hello world my name is $MY_NAME"
     ```
 1. Stage and commit the changes
