--- a/responses/02.0_entrypoint-success.md
+++ b/responses/02.0_entrypoint-success.md
@@ -1,19 +1,20 @@
-Nice work adding the `entrypoint.sh` script. This script will help define the **action**.
+Nice work adding the `entrypoint.sh` script.
 
-In `entrypoint.sh`, all we're doing is outputting a "Hello world" message using an environment variable called `MY_NAME`, which we'll define in the next step.
+In `entrypoint.sh`, all we're doing is outputting a "Hello world" message using an environment variable called `MY_NAME`.
 
 Next, we'll define a **workflow** that uses the GitHub Action.
 
 ### Workflow Files
+
 Workflows are defined in special files in the `.github/workflows` directory, named `main.yml`.
 
 Workflows can execute based on your chosen event. For this lab, we'll be using the [`push`](https://developer.github.com/v3/activity/events/types/#pushevent) event.
 
-We'll break down each line of the workflow in the next step. 
+We'll break down each line of the workflow in the next step.
 
-## Step 3: Add a workflow file
+## Step 3: Start your workflow file
 
-First, we'll add the bones of the workflow. We'll add the action itself in a later step.
+First, we'll add the bones of the workflow.
 
 ### :keyboard: Activity: Name and trigger your workflow
 
