--- a/responses/04.0_trigger.md
+++ b/responses/04.0_trigger.md
@@ -4,19 +4,19 @@ Nice, you just added an action block to your workflow file! Here are some import
 - `build:` is the identifier we're attaching to this job
 - `name:` is the name of the job, this is displayed on GitHub when the workflow is running
 - `steps:` the linear sequence of operations that make up a job
-- `uses: actions/checkout@master` uses an action called `checkout` to use a copy of our code repository
-- `uses: ./action-a` uses an action named `action-a` by referencing the path to the action's directory, relative to our repository
+- `uses: actions/checkout@v1` uses a community action called [`checkout`](https://github.com/actions/checkout) to allow the workflow to access the contents of our repository
+- `uses: ./action-a` provides the relative path the action we've created in the `action-a` directory of our repository
 - `env`: is used to specify the environment variables that will be available to your action in the runtime environment. In this case, the environment variable is `MY_NAME`, and it is currently initialized to `"Mona"`.
 
-### Your action is about to be triggered!
+### Your action has been triggered!
 
-Your repository now contains everything it needs for the action to be defined (in the `./action-a/` folder) and everything it needs to be triggered (in the `./github/workflows/main.yml` file).
+Your repository now contains an action (defined in the `/action-a/` folder) and a workflow (defined in the `./github/workflows/main.yml` file).
 
-The action will run anytime a commit is recognized on the remote repository. Since you just pushed, let's wait for the workflow to be triggered. This might take a few minutes since it's the first time running in this repository.
+This action will run anytime a new commit is created or pushed to the remote repository. Since you just created a commit, the workflow should have been triggered. This might take a few minutes since it's the first time running in this repository.
 
 ### Seeing your Action in action
 
-You can see the action status reported below, or you can click the "Actions" tab in your repository. From there you will see the actions that have run, and you can click on the action's "Log" link to view details.
+The status of your action is shown here in the pull request (look for **All checks have passed** below), or you can click the "Actions" tab in your repository. From there you will see the actions that have run, and you can click on the action's "Log" link to view details.
 
 ![View an action's log](https://user-images.githubusercontent.com/16547949/62388049-4e64e600-b52a-11e9-8bf5-db0c5452360f.png)
 
@@ -31,4 +31,4 @@ You can see the action status reported below, or you can click the "Actions" tab
 
 > _Actions can take a minute or two to run. Sometimes, I also respond too fast for the page to update! If you don't see a response from your action, wait a few seconds and refresh the page._
 
-> Note: This course will only work for members of the GitHub Actions limited public beta. If you're not in the GitHub Actions limited public beta, you won't receive a response from the action.
+> Note: This course will only work for members of the GitHub Actions beta. If you're not in the GitHub Actions beta, you won't receive a response from the action.
