--- a/responses/05.1_e-no-run.md
+++ b/responses/05.1_e-no-run.md
@@ -9,7 +9,7 @@ Here's some possible reasons why:
 Check out the action's output in the [Actions tab]({{ repo }}/actions).
 
 You can also use the following to help you troubleshoot:
-<details><summary>For <code>./action-a/entrypoint.sh</code></summary>
+<details><summary>For <code>/action-a/entrypoint.sh</code></summary>
 
 | Problem                                                      | Solution                                                                                                                                                                                          |
 |--------------------------------------------------------------|---------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------|
@@ -19,7 +19,7 @@ You can also use the following to help you troubleshoot:
 | The `entrypoint.sh` file isn't inside the `action-a` folder. | [Move `entrypoint.sh`](https://help.github.com/articles/moving-a-file-to-a-new-location/) to `action-a`.                                                                                          |
 </details>
 
-<details><summary>For <code>./action-a/Dockerfile</code></summary>
+<details><summary>For <code>/action-a/Dockerfile</code></summary>
 
 | Problem                                              | Solution                                                                                                                                                                                           |
 |------------------------------------------------------|----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------|
@@ -28,7 +28,7 @@ You can also use the following to help you troubleshoot:
 | The `Dockerfile` isn't inside the `action-a` folder. | [Move the `Dockerfile`](https://help.github.com/articles/moving-a-file-to-a-new-location/) to `action-a`.                                                                                          |
 </details>
 
-<details><summary>For <code>./.github/workflows/main.yml</code></summary>
+<details><summary>For <code>.github/workflows/main.yml</code></summary>
 
 | Problem                                                     | Solution                                                                                                                                                                                        |
 |-------------------------------------------------------------|-------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------|
