--- a/responses/05.0_workflow-success.md
+++ b/responses/05.0_workflow-success.md
@@ -4,9 +4,9 @@ You should see the string "Hello world, I'm Mona!" printed at the bottom to `std
 
 ![Actions successful log file](https://user-images.githubusercontent.com/16547949/62388562-9fc1a500-b52b-11e9-8d7e-4f4d32450fd5.png)
 
-## Step 6: Merge the workflow to `master`
+## Step 6: Incorporate the workflow
 
-As a final step, merge this pull request so the action will be a part of the main `master` branch.
+As a final step, merge this pull request so the action will be a part of the `master` branch.
 
 Anyone that uses this repository, and any future code can benefit from this workflow and your new action!
 
