--- a/responses/06.0_workflow-finished.md
+++ b/responses/06.0_workflow-finished.md
@@ -2,20 +2,20 @@
 
 ![celebrate](https://octodex.github.com/images/jetpacktocat.png)
 
-You merged and this course is now complete! I'll stop responding but the fun doesn't have to stop here. 
+You've created your first GitHub Action and this course is now complete! I'll stop responding but the fun doesn't have to stop here.
 
-## Want to keep learning? 
+## Want to keep learning?
 
 In this repository:
 - Your merge should trigger your action again, check it out in the [Actions tab]({{ repo }}/actions).
 - The `Dockerfile` contains metadata for your action. Try changing some of that. You could, for example, change the icon that displays when the action is running.
 - Change the `MY_NAME` environment variable to use your name instead of Mona's in `.github/workflows/main.yml`.
-- Change the contents of `entrypoint.sh` to do output a different message.
+- Change the contents of `entrypoint.sh` to output a different message.
 
 Outside of this repository:
-- Review the [GitHub Actions documentation](https://help.github.com/articles/about-github-actions) on the GitHub Developer site. 
+- Review the [GitHub Actions documentation](https://help.github.com/articles/about-github-actions) on the GitHub Developer site.
 - Use existing actions from the [GitHub Marketplace](https://github.com/marketplace/actions).
-- Use existing actions from GitHub's [official list](https://github.com/actions).
+- Use existing actions from GitHub's [official actions community](https://github.com/actions).
 - Use actions created by others in [awesome-actions](https://github.com/sdras/awesome-actions).
 
 Now...[what will you learn next]({{ host }}/courses)?
