--- a/responses/06.1_go-to-final.md
+++ b/responses/06.1_go-to-final.md
@@ -1,2 +1,2 @@
 <hr>
-<h3 align="center">Great work merging your pull request! I created a <a href="{{ url }}">new issue</a>, look for my next response there.</h3>
+<h3 align="center">Great work merging your pull request! I created a <a href="{{ url }}">new issue</a>, look for my final response there.</h3>
