--- a/responses/00.1_first-steps.md
+++ b/responses/00.1_first-steps.md
@@ -5,7 +5,7 @@ There are two components to using GitHub Actions that we'll cover:
 - the **action** itself
 - a **workflow** that uses the action
 
-A workflow can contain many actions, but each action has its own purpose. We'll put the files relating to the action in their own directory.
+A workflow can contain many actions. Each action has its own purpose. We'll put the files relating to the action in their own directories.
 
 ### Types of Actions
 
