--- a/responses/00.0_welcome.md
+++ b/responses/00.0_welcome.md
@@ -28,4 +28,4 @@ To learn even more, check out the [GitHub Actions page](https://github.com/featu
 
 ### Before you begin
 
-In this course you will work with issues and pull requests, as well as edit files on GitHub (or locally if that's your style). If these things are familiar to you, we recommend you take the [Introduction to GitHub]({{ host }}/githubtraining/introduction-to-github) course, first!
+In this course you will work with issues and pull requests, as well as edit files. If these things are familiar to you, we recommend you take the [Introduction to GitHub]({{ host }}/githubtraining/introduction-to-github) course, first!
