--- a/responses/02.0_entrypoint-success.md
+++ b/responses/02.0_entrypoint-success.md
@@ -14,7 +14,7 @@ We'll break down each line of the workflow in the next step.
 
 ## Step 3: Start your workflow file
 
-First, we'll add the bones of the workflow.
+First, we'll add the structure of the workflow.
 
 ### :keyboard: Activity: Name and trigger your workflow
 
