--- a/responses/03.0_workflow-block-success.md
+++ b/responses/03.0_workflow-block-success.md
@@ -31,7 +31,7 @@ Let's add the expected action to the workflow.
             MY_NAME: "Mona"
     ```
 1. Click **Start commit** in the top right of the workflow editor
-1. Type your commit message and commit your changes directly to your branch.
+1. Type your commit message and commit your changes directly to your branch
 
 <details><summary>Trouble pushing?</summary>
 
