--- a/responses/04.0_trigger.md
+++ b/responses/04.0_trigger.md
@@ -4,7 +4,7 @@ Nice, you just added an action block to your workflow file! Here are some import
 - `build:` is the identifier we're attaching to this job
 - `name:` is the name of the job, this is displayed on GitHub when the workflow is running
 - `steps:` the linear sequence of operations that make up a job
-- `uses: actions/checkout@v1` uses a community action called [`checkout`](https://github.com/actions/checkout) to allow the workflow to access the contents of our repository
+- `uses: actions/checkout@v1` uses a community action called [`checkout`](https://github.com/actions/checkout) to allow the workflow to access the contents of the repository
 - `uses: ./action-a` provides the relative path the action we've created in the `action-a` directory of our repository
 - `env`: is used to specify the environment variables that will be available to your action in the runtime environment. In this case, the environment variable is `MY_NAME`, and it is currently initialized to `"Mona"`.
 
