make extra text for everyone

--- a/responses/00.0_welcome.md
+++ b/responses/00.0_welcome.md
@@ -1,11 +1,8 @@
 # Welcome
 
-This course helps you create a simple GitHub Action and use that action in a workflow. You may already be familiar with GitHub Actions, but if you need more information, expand the "Learn more about actions" section below.
+This course helps you create a simple GitHub Action and use that action in a workflow. 
 
-<details><summary>Learn more about actions</summary>
-<hr>
-
-## Learn more about actions
+## What are GitHub Actions?
 
 GitHub Actions are a flexible way to automate nearly every aspect of your team's software workflow. Here are just a few of the ways teams are using GitHub Actions:
 
@@ -21,8 +18,6 @@ The sky is truly the limit with GitHub Actions.
 The best part, these workflows are stored as code in your repository and easily shared and reused across teams.
 
 To learn even more, check out the [GitHub Actions page](https://github.com/features/actions).
-<hr>
-</details><br>
 
 > Note: This course will only work for members of the GitHub Actions beta. Please [sign up for GitHub Actions Beta](https://github.com/features/actions) before continuing this course.
 
