remove beta note from welcome issue, add link to docs

--- a/responses/00.0_welcome.md
+++ b/responses/00.0_welcome.md
@@ -17,9 +17,7 @@ The sky is truly the limit with GitHub Actions.
 
 The best part, these workflows are stored as code in your repository and easily shared and reused across teams.
 
-To learn even more, check out the [GitHub Actions page](https://github.com/features/actions).
-
-> Note: This course will only work for members of the GitHub Actions beta. Please [sign up for GitHub Actions Beta](https://github.com/features/actions) before continuing this course.
+To learn even more, check out the [GitHub Actions feature page](https://github.com/features/actions), or the [GitHub Actions documentation](https://help.github.com/en/actions).
 
 ### Before you begin
 
