remove metadata from Dockerfile

--- a/responses/00.1_first-steps.md
+++ b/responses/00.1_first-steps.md
@@ -15,6 +15,12 @@ Docker **container actions** allow the environment to be packaged with the GitHu
 
 **JavaScript actions** decouple the GitHub Actions code from the environment allowing faster execution but accepting greater dependency management responsibility.
 
+<!--
+UNCOMMENT WHEN THESE TWO COURSE GO LIVE AND ADD PROPER LINK DETAILS
+📖 To learn more about creating each type of action, refer to the related learning lab course:
+  - [Writing JavaScript Actions]()
+  - [Writing Docker Container Actions]() -->
+
 ## Step 1: Add a `Dockerfile`
 
 Our action will use a Docker container so it will require a `Dockerfile`. Let's add it now. We won't discuss what each line means in detail, but the important thing to know is that the action will be executed in an environment defined by this file.
@@ -22,28 +28,21 @@ Our action will use a Docker container so it will require a `Dockerfile`. Let's 
 ### :keyboard: Activity: Create a `Dockerfile` and open a pull request
 
 1. Create a file titled `action-a/Dockerfile` by [using this quick link]({{ dockerfileUrl }}) or manually:
-    - Create a new branch. _Branches should be named intentionally, so a good name for this branch could be `first-action`_.
-    - On the new branch, create a directory: `action-a`. _Note:_ If you're working on GitHub.com, you can create a directory and a file at the same time by naming the file `action-a/Dockerfile`.
-    - In the `action-a` directory, create a file titled `Dockerfile`.
+   - Create a new branch. _Branches should be named intentionally, so a good name for this branch could be `first-action`_.
+   - On the new branch, create a directory: `action-a`. _Note:_ If you're working on GitHub.com, you can create a directory and a file at the same time by naming the file `action-a/Dockerfile`.
+   - In the `action-a` directory, create a file titled `Dockerfile`.
 1. Fill the `Dockerfile` with the content below:
-    ```Dockerfile
-    FROM debian:9.5-slim
 
-    LABEL "com.github.actions.name"="Hello World"
-    LABEL "com.github.actions.description"="Write arguments to the standard output"
-    LABEL "com.github.actions.icon"="mic"
-    LABEL "com.github.actions.color"="purple"
+   ```Dockerfile
+   FROM debian:9.5-slim
 
-    LABEL "repository"="http://github.com/octocat/hello-world"
-    LABEL "homepage"="http://github.com/actions"
-    LABEL "maintainer"="Octocat <octocat@github.com>"
+   ADD entrypoint.sh /entrypoint.sh
+   RUN chmod +x /entrypoint.sh
+   ENTRYPOINT ["/entrypoint.sh"]
+   ```
 
-    ADD entrypoint.sh /entrypoint.sh
-    RUN chmod +x /entrypoint.sh
-    ENTRYPOINT ["/entrypoint.sh"]
-    ```
 1. Commit your file
-    - If you're working locally, you will also need stage your file and to push the branch to GitHub.
+   - If you're working locally, you will also need stage your file and to push the branch to GitHub.
 1. Open a pull request with your new branch against `master`
 
 <hr>
