bring responses up to date

--- a/responses/01.0_docker-success.md
+++ b/responses/01.0_docker-success.md
@@ -14,11 +14,13 @@ An entrypoint script must exist in our repository so that Docker has something t
 
 1. As a part of this branch and pull request, create a file in the `/action-a/` directory titled `entrypoint.sh`. You can do so with [this quicklink]({{ actionAUrl }})
 1. Add the following content to the `entrypoint.sh` file:
-    ```shell
-    #!/bin/sh -l
 
-	sh -c "echo Hello world my name is $MY_NAME"
-    ```
+   ```shell
+   #!/bin/sh -l
+
+   sh -c "echo Hello world my name is $INPUT_MY_NAME"
+   ```
+
 1. Stage and commit the changes
 1. Push the changes to GitHub
 
