--- a/responses/02.0_entrypoint-success.md
+++ b/responses/02.0_entrypoint-success.md
@@ -3,45 +3,37 @@ Nice work adding the `entrypoint.sh` script.
 In `entrypoint.sh`, all we're doing is outputting a "Hello world" message using an environment variable called `MY_NAME`.
 
 Next, we'll define a **workflow** that uses the GitHub Action.
+Next, we'll define the `action.yml` file which contains the metadata for our action.
 
-### Workflow Files
+### action.yml
 
-Workflows are defined in special files in the `.github/workflows` directory, named `main.yml`.
+All actions require a metadata file that uses YAML syntax. The data in the metadata file defines the `inputs`, `outputs` and main `entrypoint` for your action.
 
-Workflows can execute based on your chosen event. For this lab, we'll be using the [`push`](https://developer.github.com/v3/activity/events/types/#pushevent) event.
+## Step 3: Add an action metadata file
 
-We'll break down each line of the workflow in the next step.
+We will use an `input` parameter to read in the value of `MY_NAME`.
 
-## Step 3: Start your workflow file
+### :keyboard: Activity: Create action.yml
 
-First, we'll add the structure of the workflow.
+1. As a part of this branch and pull request, create a file titled `action-a/action.yml`. You can do so using [this quicklink]({{ actionAUrl }}) or manually.
+1. Add the following content to the `action.yml` file:
 
-### :keyboard: Activity: Name and trigger your workflow
+   ```yaml
+   name: "Hello Actions"
+   description: "Greet someone"
+   inputs:
+     MY_NAME:
+       description: "Who to greet"
+       required: true
+       default: "World"
 
-1. Create a file titled `.github/workflows/main.yml`. You can do so [using this quicklink]({{ worfkflowUrl}}) or manually:
-    - As a part of this branch and pull request, create a `workflows` directory nested inside the `.github` directory.
-    - In the new `.github/workflows/` directory, create a file titled `main.yml`
-1. Add the following content to the `main.yml` file:
-    ```yaml
-    name: A workflow for my Hello World file
-    on: push
-    ```
+   runs:
+     using: "docker"
+     image: "Dockerfile"
+   ```
+
 1. Stage and commit the changes
 1. Push the changes to GitHub
-
-<details><summary>Trouble pushing? Click here.</summary>
-
-The `main.yml` file cannot be edited using an integration. Try editing the file using the web interface, or your command line.
-
-It is possible that you are using an integration (like GitHub Desktop or any other tool that authenticates as you and pushes on your behalf) if you receive a message like the one below:
-
-```shell
-To https://github.com/your-username/your-repo.git
- ! [remote rejected] your-branch -> your-branch (refusing to allow an integration to update main.yml)
-error: failed to push some refs to 'https://github.com/your-username/your-repo.git'
-```
-</details>
-<br />
 
 <hr>
 <h3 align="center">I'll respond when I detect a new commit on this branch.</h3>
