--- a/responses/04.0_workflow-block-success.md
+++ b/responses/04.0_workflow-block-success.md
@@ -1,6 +1,7 @@
 Nice work! :tada: You added a workflow!
 
 Here's what it means:
+
 - `name: A workflow for my Hello World file` gives your workflow a name. This name appears on any pull request or in the Actions tab. The name is especially useful when there are multiple workflows in your repository.
 - `on: push` indicates that your workflow will execute anytime code is pushed to your repository, using the [`push`](https://developer.github.com/v3/activity/events/types/#pushevent) event.
 
@@ -19,17 +20,17 @@ Let's add the expected action to the workflow.
 ### :keyboard: Activity: Add an action block to your workflow file
 
 1. As a part of this branch and pull request, [edit `.github/workflows/main.yml`]({{ workflowEditUrl }}) to append the following content:
-    ```yaml
-    jobs:
-      build:
-        name: Hello world action
-        runs-on: ubuntu-latest    
-        steps:
-        - uses: actions/checkout@v1
-        - uses: ./action-a
-          env:
-            MY_NAME: "Mona"
-    ```
+   ```yaml
+   jobs:
+     build:
+       name: Hello world action
+       runs-on: ubuntu-latest
+       steps:
+         - uses: actions/checkout@v1
+         - uses: ./action-a
+           with:
+             MY_NAME: "Mona"
+   ```
 1. Click **Start commit** in the top right of the workflow editor
 1. Type your commit message and commit your changes directly to your branch
 
@@ -44,6 +45,7 @@ To https://github.com/your-username/your-repo.git
  ! [remote rejected] your-branch -> your-branch (refusing to allow an integration to update main.yml)
 error: failed to push some refs to 'https://github.com/your-username/your-repo.git'
 ```
+
 </details>
 <br />
 
