--- a/responses/02.0_entrypoint-success.md
+++ b/responses/02.0_entrypoint-success.md
@@ -21,6 +21,8 @@ We will use an `input` parameter to read in the value of `MY_NAME`.
    ```yaml
    name: "Hello Actions"
    description: "Greet someone"
+   author: octocat@github.com
+
    inputs:
      MY_NAME:
        description: "Who to greet"
@@ -30,6 +32,10 @@ We will use an `input` parameter to read in the value of `MY_NAME`.
    runs:
      using: "docker"
      image: "Dockerfile"
+
+   branding:
+     icon: "mic"
+     color: "purple"
    ```
 
 1. Stage and commit the changes
