update entrypoint-success for consistency

--- a/responses/02.0_entrypoint-success.md
+++ b/responses/02.0_entrypoint-success.md
@@ -21,7 +21,7 @@ We will use an `input` parameter to read in the value of `MY_NAME`.
    ```yaml
    name: "Hello Actions"
    description: "Greet someone"
-   author: octocat@github.com
+   author: "octocat@github.com"
 
    inputs:
      MY_NAME:
