--- a/responses/07.0_workflow-finished.md
+++ b/responses/07.0_workflow-finished.md
@@ -6,13 +6,17 @@ You've created your first GitHub Action and this course is now complete! I'll st
 
 ## Want to keep learning?
 
+<!-- Continue learning about actions by taking the next course in the [GitHub Actions Learning Path]() -->
+
 In this repository:
+
 - Your merge should trigger your action again, check it out in the [Actions tab]({{ repo }}/actions).
 - The `Dockerfile` contains metadata for your action. Try changing some of that. You could, for example, change the icon that displays when the action is running.
 - Change the `MY_NAME` environment variable to use your name instead of Mona's in `.github/workflows/main.yml`.
 - Change the contents of `entrypoint.sh` to output a different message.
 
 Outside of this repository:
+
 - Review the [GitHub Actions documentation](https://help.github.com/articles/about-github-actions) on the GitHub Developer site.
 - Use existing actions from the [GitHub Marketplace](https://github.com/marketplace/actions).
 - Use existing actions from GitHub's [official actions community](https://github.com/actions).
