Fix minor bug in welcome note
Welcome note is missing a negative qualifier

--- a/responses/00.0_welcome.md
+++ b/responses/00.0_welcome.md
@@ -21,4 +21,4 @@ To learn even more, check out the [GitHub Actions feature page](https://github.c
 
 ### Before you begin
 
-In this course you will work with issues and pull requests, as well as edit files. If these things are familiar to you, we recommend you take the [Introduction to GitHub]({{ host }}/githubtraining/introduction-to-github) course, first!
+In this course you will work with issues and pull requests, as well as edit files. If these things are not familiar to you, we recommend you take the [Introduction to GitHub]({{ host }}/githubtraining/introduction-to-github) course, first!
