Remove single-item ordered list

--- a/responses/05.0_trigger.md
+++ b/responses/05.0_trigger.md
@@ -24,7 +24,7 @@ The status of your action is shown here in the pull request (look for **All chec
 
 ### :keyboard: Activity: See your action trigger the workflow
 
-1. You've done the work, now sit back and see your action trigger the workflow!
+You've done the work, now sit back and see your action trigger the workflow!
 
 <hr>
 <h3 align="center">I will respond when I detect your action has run and reported a status.</h3>
