Update GitHub Actions documentation URL

--- a/responses/07.0_workflow-finished.md
+++ b/responses/07.0_workflow-finished.md
@@ -17,7 +17,7 @@ In this repository:
 
 Outside of this repository:
 
-- Review the [GitHub Actions documentation](https://help.github.com/articles/about-github-actions) on the GitHub Developer site.
+- Review the [GitHub Actions documentation](https://docs.github.com/actions/learn-github-actions) on the GitHub Developer site.
 - Use existing actions from the [GitHub Marketplace](https://github.com/marketplace/actions).
 - Use existing actions from GitHub's [official actions community](https://github.com/actions).
 - Use actions created by others in [awesome-actions](https://github.com/sdras/awesome-actions).
