edit sentence to include self-hosted runner example

--- a/responses/00.1_first-steps.md
+++ b/responses/00.1_first-steps.md
@@ -11,7 +11,7 @@ A workflow can contain many actions. Each action has its own purpose. We'll put 
 
 Actions come in two types: **container actions** and **JavaScript actions**.
 
-Docker **container actions** allow the environment to be packaged with the GitHub Actions code and can only execute in the GitHub-Hosted Linux environment.
+Docker **container actions** allow the environment to be packaged with the GitHub Actions code and can execute in the GitHub-Hosted Linux environment or, if you prefer using a self-hosted runner, the runner must use a Linux operating system and have Docker installed to run Docker container actions.
 
 **JavaScript actions** decouple the GitHub Actions code from the environment allowing faster execution but accepting greater dependency management responsibility.
 
