--- a/responses/07.0_workflow-finished.md
+++ b/responses/07.0_workflow-finished.md
@@ -11,7 +11,7 @@ You've created your first GitHub Action and this course is now complete! I'll st
 In this repository:
 
 - Your merge should trigger your action again, check it out in the [Actions tab]({{ repo }}/actions).
-- The `Dockerfile` contains metadata for your action. Try changing some of that. You could, for example, change the icon that displays when the action is running.
+- The `action.yml` file contains metadata for your action. Try changing some of that. You could, for example, change the icon that displays when the action is running.
 - Change the `MY_NAME` environment variable to use your name instead of Mona's in `.github/workflows/main.yml`.
 - Change the contents of `entrypoint.sh` to output a different message.
 
