Change the phrase master to main

--- a/responses/00.1_first-steps.md
+++ b/responses/00.1_first-steps.md
@@ -43,7 +43,7 @@ Our action will use a Docker container so it will require a `Dockerfile`. Let's 
 
 1. Commit your file
    - If you're working locally, you will also need stage your file and to push the branch to GitHub.
-1. Open a pull request with your new branch against `master`
+1. Open a pull request with your new branch against `main`
 
 <hr>
 <h3 align="center">I'll respond in your new pull request with next steps.</h3>
