--- a/responses/06.0_workflow-success.md
+++ b/responses/06.0_workflow-success.md
@@ -6,11 +6,11 @@ You should see the string "Hello world, I'm Mona!" printed at the bottom to `std
 
 ## Step 7: Incorporate the workflow
 
-As a final step, merge this pull request so the action will be a part of the `master` branch.
+As a final step, merge this pull request so the action will be a part of the `main` branch.
 
 Anyone that uses this repository, and any future code can benefit from this workflow and your new action!
 
-### :keyboard: Activity: Merge your workflow into the `master` branch
+### :keyboard: Activity: Merge your workflow into the `main` branch
 
 1. Merge this pull request
 1. Delete your branch
