Modify INPUT_MY_NAME to MY_NAME so the variable names are consistent across the tutorial

--- a/responses/01.0_docker-success.md
+++ b/responses/01.0_docker-success.md
@@ -18,7 +18,7 @@ An entrypoint script must exist in our repository so that Docker has something t
    ```shell
    #!/bin/sh -l
 
-   sh -c "echo Hello world my name is $INPUT_MY_NAME"
+   sh -c "echo Hello world my name is $MY_NAME"
    ```
 
 1. Stage and commit the changes
