Upgrade GitHub ACheckout Action to v2 and updated instruction

--- a/responses/01.0_docker-success.md
+++ b/responses/01.0_docker-success.md
@@ -13,7 +13,7 @@ An entrypoint script must exist in our repository so that Docker has something t
 ### :keyboard: Activity: Add an entrypoint script and commit it to your branch
 
 1. As a part of this branch and pull request, create a file in the `/action-a/` directory titled `entrypoint.sh`. You can do so with [this quicklink]({{ actionAUrl }})
-1. Add the following content to the `entrypoint.sh` file:
+1. Add the following content to the `entrypoint.sh` file. Later in this tutorial, **$INPUT_MY_NAME** is going to get a value from **MY_NAME**.
 
    ```shell
    #!/bin/sh -l
