--- a/responses/02.0_entrypoint-success.md
+++ b/responses/02.0_entrypoint-success.md
@@ -15,7 +15,7 @@ We will use an `input` parameter to read in the value of `MY_NAME`.
 ### :keyboard: Activity: Create action.yml
 
 1. As a part of this branch and pull request, create a file titled `action-a/action.yml`. You can do so using [this quicklink]({{ actionAUrl }}) or manually.
-1. Add the following content to the `action.yml` file:
+1. Add the following content to the `action.yml` file. Feel free to change the values for **author**, **description** and **default** under **MY_NAME**, and **property values** under **branding**. You can visit [**Metadata syntax for GitHub Actions**](https://docs.github.com/en/actions/creating-actions/metadata-syntax-for-github-actions) to learn more about Metadata syntax, particular about [**branding**](https://docs.github.com/en/actions/creating-actions/metadata-syntax-for-github-actions#branding).
 
    ```yaml
    name: "Hello Actions"
