--- a/responses/03.0_actionyml-success.md
+++ b/responses/03.0_actionyml-success.md
@@ -2,7 +2,7 @@ Next, we'll define a **workflow** that uses the GitHub Action.
 
 ### Workflow Files
 
-Workflows are defined in special files in the `.github/workflows` directory, named `main.yml`.
+[**Workflows**](https://docs.github.com/en/actions/reference/workflow-syntax-for-github-actions) are defined in special files in the `.github/workflows` directory, named `main.yml`.
 
 Workflows can execute based on your chosen event. For this lab, we'll be using the [`push`](https://developer.github.com/v3/activity/events/types/#pushevent) event.
 
