--- a/responses/04.0_workflow-block-success.md
+++ b/responses/04.0_workflow-block-success.md
@@ -9,7 +9,7 @@ Next, we need to specify a job or jobs to run.
 
 ### Actions
 
-Workflows piece together jobs, and jobs piece together steps. We'll now create a job that runs an action. Actions can be used from within the same repository, from any other public repository, or from a published Docker container image. We'll use an action that we'll define in this repository.
+Workflows piece together jobs, and jobs piece together steps. We'll now create a job that runs an action. Actions can be used from within the same repository, from any other public repository, or from a published Docker container image. We'll use an action that we'll define in this repository. This specific workflow utilizes **GitHub Action** called [**Checkout V2**](https://github.com/actions/checkout).
 
 We'll add the block now, and break it down in the next step.
 
@@ -19,15 +19,17 @@ Let's add the expected action to the workflow.
 
 ### :keyboard: Activity: Add an action block to your workflow file
 
-1. As a part of this branch and pull request, [edit `.github/workflows/main.yml`]({{ workflowEditUrl }}) to append the following content:
+1. As a part of this branch and pull request, [edit `.github/workflows/main.yml`]({{ workflowEditUrl }}) to append the following content. Feel free to replace the value of **MY_NAME** with your name or something that you want to be printing out. 
    ```yaml
    jobs:
      build:
        name: Hello world action
        runs-on: ubuntu-latest
        steps:
-         - uses: actions/checkout@v1
-         - uses: ./action-a
+         - name: Check out repository
+           uses: actions/checkout@v2
+         - name: Use local action-a directory
+           uses: ./action-a
            with:
              MY_NAME: "Mona"
    ```
