Fix expected string output

--- a/responses/06.0_workflow-success.md
+++ b/responses/06.0_workflow-success.md
@@ -1,6 +1,6 @@
 Success! :tada: Your workflow ran! [You can see the output here]({{ repo }}/actions).
 
-You should see the string "Hello world, I'm Mona!" printed at the bottom to `stdout`.
+You should see the string "Hello world my name is Mona" printed at the bottom to `stdout`.
 
 ![Actions successful log file](https://user-images.githubusercontent.com/16547949/62388562-9fc1a500-b52b-11e9-8d7e-4f4d32450fd5.png)
 
